added some small changes and updated colors

--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
       property="og:description"
       content="A portfolio and collection of project by Darya Lapata"
     />
-    <!-- <meta
-      property="og:image"
-      content="https://daryalapata.netlify.app/img/todos.jpeg"
-    /> -->
     <meta property="og:url" content="https://daryalapata.netlify.app/" />
     <link rel="stylesheet" href="./style.css" />
     <link
@@ -24,7 +20,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="img/star.png" type="image/png" />
+    <link rel="icon" href="img/icon.png" type="image/png" />
     <title>Darya Lapata • Frontend Developer • Portfolio</title>
   </head>
   <body>
@@ -62,7 +58,7 @@
           </h2>
           <h1>frontend</h1>
           <h1>developer</h1>
-          <h2 class="my-name-title">+ javascript lover</h2>
+          <h2 class="my-name-title">with interest for UX/UI design</h2>
         </div>
         <div class="profile-img-container">
           <img
@@ -102,8 +98,9 @@
         </div>
         <article class="tech-text">
           <p>
-            HTML5, CSS3, <span class="bold">JavaScript ES6</span>, Web
-            Accessibility, API:s, Git, Command Line, Liquid, React.
+            HTML, CSS, SASS, JavaScript, React, Web Accessibility, API:s, Git,
+            React, JSX, Styled Components, React Redux, Web components(Lit),
+            Typescript, Mailchimp, Thinkific, Clickup, Netlify
           </p>
         </article>
       </div>
