change profile text

--- a/index.html
+++ b/index.html
@@ -78,13 +78,12 @@
             <span class="line"></span>
             <span class="dot"></span>
             Hi! I’m Darya 👋 - a curious frontend developer with a passion for
-            building user-friendly projects and finding a long-lasting solutions
-            for my code. With my big interest in personal growth and software
-            development, I attended 24 weeks of coding bootcamp to learn new
-            technologies and changed my career to work with something that I
-            have a passion for. As for my future, I am looking forward to diving
-            deeper into UX/UI design and continue sharpening my skills in
-            JavaScript.
+            building user-friendly projects that bring value to people. I have
+            experience with HTML/CSS/JavaScript, React and NodeJS. With my
+            interest in programming generally I continue to learn new
+            technologies and sharpen my coding skills. As for my future, I am
+            looking forward to diving deeper into UX/UI design and continue to
+            develop games in Godot.
           </p>
         </article>
       </div>
@@ -98,9 +97,10 @@
         </div>
         <article class="tech-text">
           <p>
-            HTML, CSS, SASS, JavaScript, React, Web Accessibility, API:s, Git,
-            React, JSX, Styled Components, React Redux, Web components(Lit),
-            Typescript, Mailchimp, Thinkific, Clickup, Netlify
+            HTML5/CSS/JavaScript (ES6) • React • JSX • Styled Components • Redux
+            • Web components (Lit) • Typescript • MongoDB • NodeJS • ExpressJS •
+            Responsive Design • Git • API:s • Webpack • DOM Manipulation • JSON
+            • Web Accessibility • ClickUp • Trello • VS Code
           </p>
         </article>
       </div>
